internal/dataplane/translator/testdata/golden/kong-service-facade/feature-flag-on_golden.yaml
_format_version: "3.0"
plugins:
- name: basic-auth
  service: default.svc-facade-beta.svc.facade
  tags:
  - k8s-name:auth-beta
  - k8s-namespace:default
  - k8s-kind:KongPlugin
  - k8s-group:configuration.konghq.com
  - k8s-version:v1
- name: basic-auth
  service: default.svc-facade-alpha.svc.facade
  tags:
  - k8s-name:auth-beta
  - k8s-namespace:default
  - k8s-kind:KongPlugin
  - k8s-group:configuration.konghq.com
  - k8s-version:v1
services:
- connect_timeout: 60000
  host: default.svc-facade-beta.svc.facade
  id: 0487ced6-2552-5ccb-905d-db086a449a6c
  name: default.svc-facade-beta.svc.facade
  path: /
  port: 80
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - https_redirect_status_code: 426
    id: 029f01f6-e7e4-55dd-ab04-3de4283709d8
    name: default.beta.svc-facade-beta.
    path_handling: v0
    paths:
    - ~/beta$
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 0
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:beta
    - k8s-namespace:default
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:svc
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
- connect_timeout: 60000
  host: default.svc-facade-alpha.svc.facade
  id: 08c15f88-4777-5a1c-8d1c-28c8f5b252a3
  name: default.svc-facade-alpha.svc.facade
  path: /
  port: 80
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - https_redirect_status_code: 426
    id: 4a8a1cb0-bac7-554a-851a-bfc11a466489
    name: default.alpha.svc-facade-alpha.
    path_handling: v0
    paths:
    - ~/alpha$
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 0
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:alpha
    - k8s-namespace:default
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:svc
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: default.svc-facade-beta.svc.facade
  tags:
  - k8s-name:svc
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
  targets:
  - target: 10.244.0.5:80
- algorithm: round-robin
  name: default.svc-facade-alpha.svc.facade
  tags:
  - k8s-name:svc
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
  targets:
  - target: 10.244.0.5:80
